--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,44 @@
-# Local Netlify folder
-.netlify
+# Dependencies
+node_modules/
+package-lock.json
 
-node_modules
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Build and dist
+dist/
+build/
+.next/
+out/
+
+# Testing
+coverage/
+.nyc_output/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Kiro specific
+.kiro/
+
+# Netlify
+.netlify/
+
