chore: Configure Netlify deployment and project structure
- Add .vscode to gitignore for IDE configuration isolation
- Create docs directory with .gitkeep placeholder for documentation
- Replace generic API redirect with specific endpoint routing in netlify.toml
- Add build configuration to exclude test files from Netlify deployment
- Implement granular API routes for entity, search, meta, and update endpoints
- Improve API routing specificity and maintainability for serverless functions

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,25 @@
   directory = "netlify/functions"
   node_bundler = "esbuild"
 
+[build]
+  ignore = "netlify/functions/**/*.test.ts"
+
 [[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/ofac-:splat"
+  from = "/api/entity/*"
+  to = "/.netlify/functions/ofac-entity"
+  status = 200
+
+[[redirects]]
+  from = "/api/search/*"
+  to = "/.netlify/functions/ofac-search"
+  status = 200
+
+[[redirects]]
+  from = "/api/meta/*"
+  to = "/.netlify/functions/ofac-meta"
+  status = 200
+
+[[redirects]]
+  from = "/api/update/*"
+  to = "/.netlify/functions/ofac-update"
   status = 200
