chore: Add comprehensive documentation and testing infrastructure
- Expand README with complete API documentation, architecture diagrams, and setup instructions
- Add vitest configuration for unit and property-based testing
- Update package.json and package-lock.json with testing dependencies
- Update OpenAPI specification with complete endpoint definitions
- Fix .gitignore formatting (.vscode/ instead of .vscode)
- Remove redeploytest.sh deployment script
- Establish testing framework and documentation standards for project maintenance

--- a/package.json
+++ b/package.json
@@ -6,6 +6,19 @@
     "@netlify/blobs": "^8.0.0",
     "@netlify/functions": "^2.0.0",
     "csv-parse": "^5.5.6",
-    "fuse.js": "^7.0.0"
+    "fuse.js": "^7.0.0",
+    "marked": "^11.1.1",
+    "highlight.js": "^11.9.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "fast-check": "^3.15.0",
+    "vitest": "^4.0.17"
+  },
+  "scripts": {
+    "test": "vitest --run",
+    "test:watch": "vitest",
+    "build:docs": "node docs/build.js",
+    "build": "npm run build:docs"
   }
 }
